Closed
Bug 16673
Opened 26 years ago
Closed 25 years ago
[DOGFOOD]User50 directory is in the Program Files directory after creating new profile.
Categories
(Core Graveyard :: Profile: BackEnd, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M13
People
(Reporter: dougt, Assigned: racham)
References
Details
(Whiteboard: [PDT-])
For whatever reason which I have isolated, the "User50" directory is in the
Program Files directory after creating new profile. I would expect that this
directory be created in the "Netscape" folder under "Program Files".
Have not tried reproducing.
Comment 1•26 years ago
|
||
Users50 is created as: Program Files\Netscape\Users50
unless you specify otherwise
Comment 2•26 years ago
|
||
I stand corrected, able to reproduce this today
If you use install.exe on sweetlou daily builds Users50 is created as Program
Files\Netscape\Users50 unless you choose a userdefined location
If you use nsinstall.exe under the installer directory on sweetlou, Users50 is
indeed created as Program Files\Users50.
Also noted path of mozilla
install.exe Program Files\Netscape\Seamonkey\x86rel\mozilla.exe
nsinstall.exe Program Files\Netscape\Seamonkey\mozilla.exe
Comment 3•26 years ago
|
||
Dogfood Candidate
Updated•26 years ago
|
Summary: User50 directory is in the Program Files directory after creating new profile. → [DOGFOOD]User50 directory is in the Program Files directory after creating new profile.
Comment 4•26 years ago
|
||
This is either an install issue, or a need for coordination. We have some code
in the app that tries to figure out the right directory based on where the
executable lives. I'd rather not keep changing this code all the time, can we
pick an install location and stick to it?
Comment 5•26 years ago
|
||
adding Cathleen and Sean to cc list
Comment 7•26 years ago
|
||
The algorithm used for windows is broken. For one thing there is no "Program"
directory any more. Since it had no siblings it makes no sense.
For another, what happens if the user overrides the default location and
installs into C:\Seamonkey and you try to go up two or three directories from
there? Go up one dir at most.
In fact, on a locked-down NT system the typical user may not be able to write
anything into "Program Files" -- you should look for the HOMEDRIVE and HOMEPATH
environment variable and use those if you find them.
Comment 8•26 years ago
|
||
Hmm. What I'd like is to have a mechanism that doesn't depend on the profile
manager reading tea leaves to figure it out. Is it possible for the installer
to help us pick the right place? Doing this in the code has always been
problematic.
One solution may be for the installer to create a default pref file somewhere
that the prefs initialization code will pick it up. The profile manager could
then use the pref value to find the directory. I'm sure there are other
possible ways of doing this...
Updated•25 years ago
|
Status: NEW → ASSIGNED
Updated•25 years ago
|
Target Milestone: M13
Updated•25 years ago
|
Target Milestone: M13 → M12
Updated•25 years ago
|
Assignee: selmer → cathleen
Status: ASSIGNED → NEW
Comment 10•25 years ago
|
||
Cathleen, I need an established plan for how the profile manager can derive the
correct location for the Users50 directory from the install. It seems somewhat
broken the the profile manager has to guess on where this should be when the
installer really drives it. I think the config.ini should expose this as a
settable item and the info should be conveyed into profile manager by some means
such as a default prefs file or something.
If you think I'm whining and should just hard-code this again, please let me
know that and then don't let the install hierarchy change to invalidate the
assumption :-)
Comment 11•25 years ago
|
||
I don't quite see this as an installation problem. The code to determine the
correct place for the profiles should be done in the Profile Manager code. I
don't see how duplicating the code in the installer will help any
(I assume duplicating because if the installer was not run, the Profile Manager
would still have to do some thinking as to where the profiles go).
Since there is no more Program subfolder within Seamonkey (or the Communicator)
folder, you should be safe defaulting to the same parent folder as Seamonkey,
looking like:
[Program files]\Netscape\Seamonkey
[Program files]\Netscape\Users50
The hard coding part is an unfortunate requirement when a default value is
required. Either it is done in the Profile Manager code or in the installer
code (or both). I rather limit code duplication to a minimum.
Maybe the default value can be set/changed in netscape.cfg so as to be
configurable via the config tool?
reassigning to selmer.
Updated•25 years ago
|
Whiteboard: [PDT+] → [PDT-]
Comment 13•25 years ago
|
||
trying that again, moving to M13
Updated•25 years ago
|
Assignee: selmer → racham
Comment 14•25 years ago
|
||
Bhuvan, sounds like the best we can do is use a default-pref for this.
Comment 15•25 years ago
|
||
*** Bug 21543 has been marked as a duplicate of this bug. ***
Comment 16•25 years ago
|
||
I just tried the the latest mozilla-win32-installer. I directed Mozilla to
"c:\foo\Mozilla" and it created "c:\Users50".
I agree, that code redundancy should be avoided. Why are we trying to run
without being "installed"?
If not, the following would be a nice solution IMHO: The installer asks for both
a "bin" dir (default "%PROGRAMDIR%\Mozilla\bin" *1) and a default users dir *2.
I've seen that often, e.g. for Lotus Notes.
When profile manager is about to create a new profile, it also asks for a dir to
store it in, defaulting to a dir in the default users dir (e.g.
"%PROGRAMDIR%\MyMozilla\MyUsers\Ben").
For well-administered multiuser machines, maybe there is a way to include some
environment variables (e.g. for the users "Documents" dir) in the default users
dir. That would make storing the profile on the file server ("Windows-Roaming")
possible and easy.
*1 not sure, how environment variables are named of if they exist.
*2 (default to "%PROGRAMDIR%\Mozilla\Users" or "%HOMEPATH%\Mozilla\Users")
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 17•25 years ago
|
||
The final install structure planned for both mozilla and netscape browsers
includes a depth of 1 level from the browser executable. So, making the Users50
directory to reside 1 level up to the executable. OS is wrongly marked as
All. It's windows only bug.
Checked in the code to achieve this. Marking fixed.
Updated•25 years ago
|
Status: RESOLVED → VERIFIED
Comment 18•25 years ago
|
||
build 2000011211
Comment 19•25 years ago
|
||
Moving all Profile Manager bugs to new Profile Manager Backend component.
Profile Manager component to be deleted.
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•