Fixing bug 16673. User50 directory on windows will now lives 1 level up fromthe executable. r=ssu